--- a/Dipendenze-Angular/src/app/app.component.html
+++ b/Dipendenze-Angular/src/app/app.component.html
@@ -1,2 +1,5 @@
-<router-outlet></router-outlet>
-<app-rating></app-rating>
+<app-header></app-header>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
+<!-- <app-rating></app-rating> -->
